add margin parent

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </nav>
     
     <!-- tfser -->
-    <h1 class="text-center">التفسير</h1>
+    <h1 class="text-center my-5">التفسير</h1>
     <div class="container my-5">
   <div class="row">
 
