--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
               <a class="nav-link text-primary" href="/salla">الصلاة</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-primary" href="/quran" raria-current="page">
+              <a class="nav-link text-primary" href="/quran" aria-current="page">
                 القرأن
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-primary" href="/tfser " raria-current="page">
+              <a class="nav-link text-primary" href="/tfser" aria-current="page">
                 التفسير
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-primary" href="/about-us" raria-current="page">
+              <a class="nav-link text-primary" href="/about-us" aria-current="page">
                 من نحن
               </a>
             </li>
